--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+certifi==2021.5.30
+charset-normalizer==2.0.4
 cycler==0.10.0
+idna==3.2
 joblib==1.0.1
 kiwisolver==1.3.1
 matplotlib==3.3.4
 numpy==1.19.5
+pandas==0.25.3
 Pillow==8.3.1
 pyparsing==2.4.7
 python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
 scikit-learn==0.24.2
 scipy==1.5.4
 six==1.16.0
 sklearn==0.0
 threadpoolctl==2.2.0
+urllib3==1.26.6
