--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint==1.5.5
     - name: Analysing the code with pylint
       run: |
         pylint `ls -R|grep .py$|xargs`
