Add data preprocessing functionality

--- a/log_config.conf
+++ b/log_config.conf
@@ -21,7 +21,7 @@ args = (sys.stdout,)
 class = logging.FileHandler
 level = DEBUG
 formatter = std_out
-args = ('../logs/app.log', 'w')
+args = ('../../logs/app.log', 'w')
 
 [formatter_std_out]
 format = %(asctime)s : %(levelname)s : %(module)s : %(funcName)s : %(lineno)d - %(message)s
