--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+astroid==2.7.2
 certifi==2021.5.30
 charset-normalizer==2.0.4
+colorama==0.4.4
 cycler==0.10.0
 idna==3.2
+isort==5.8.0
 joblib==1.0.1
 kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
 matplotlib==3.3.4
+mccabe==0.6.1
+numexpr==2.7.3
 numpy==1.19.5
 pandas==0.25.3
 Pillow==8.3.1
+platformdirs==2.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.1
@@ -16,5 +23,10 @@ scikit-learn==0.24.2
 scipy==1.5.4
 six==1.16.0
 sklearn==0.0
+tables==3.6.1
 threadpoolctl==2.2.0
+toml==0.10.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.1
 urllib3==1.26.6
+wrapt==1.12.1
