--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.7.2
+atomicwrites==1.4.0
+attrs==21.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 colorama==0.4.4
 cycler==0.10.0
 idna==3.2
+importlib-metadata==4.8.1
+iniconfig==1.1.1
 isort==5.8.0
 joblib==1.0.1
 kiwisolver==1.3.1
@@ -12,10 +16,14 @@ matplotlib==3.3.4
 mccabe==0.6.1
 numexpr==2.7.3
 numpy==1.19.5
+packaging==21.0
 pandas==0.25.3
 Pillow==8.3.1
 platformdirs==2.2.0
+pluggy==0.13.1
+py==1.10.0
 pyparsing==2.4.7
+pytest==6.2.4
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
@@ -30,3 +38,4 @@ typed-ast==1.4.3
 typing-extensions==3.10.0.1
 urllib3==1.26.6
 wrapt==1.12.1
+zipp==3.5.0
